# multifiledownloader-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  error.rs  main.rs  utils.rs
