[package]
name = "multifiledownloader"
description = "A Concurrent and Configurable Multi-File downloader cli tool."
authors = ["Tralah M Brian <https://github.com/tralahm>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tralahm/multifiledownloader-rs"
categories = [
  "command-line-utilities",
  "filesystem",
  "web-programming::http-client",
]
repository = "https://github.com/tralahm/multifiledownloader-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = [
  "blocking",
  "json",
  "stream",
  "gzip",
  "zstd",
] }

url = "2.5.4"
rand = "0.9"
shellexpand = "3.1.1"
humansize = "2.1.3"

anyhow = "1.0.98"
thiserror = "2.0.12"

rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }

tracing = { version = "0.1.41", features = ["attributes", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
  "json",
  "env-filter",
  "registry",
] }

clap = { version = "4.5.38", features = ["derive", "env"] }
clap_complete = "4.5.50"

shadow-rs = "1.1.1"
dotenvy = "0.15.7"

bytes = { version = "1.10.1", features = ["serde"] }
headers = "0.4.0"

[build-dependencies]
shadow-rs = "1.1.1"
